--- a/MonolithFullStackTemplate/templateUI/src/styles.scss
+++ b/MonolithFullStackTemplate/templateUI/src/styles.scss
@@ -80,5 +80,9 @@ $tabletSize: 800px;
   flex: 1 1 auto;
 }
 
+.full-width {
+  width: 100%;
+}
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
