--- a/MonolithFullStackTemplate/templateUI/src/app/login/login.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/login/login.component.html
@@ -6,36 +6,29 @@
   <div class="login-container">
     <mat-card class="login-form">
       <mat-card-content>
-        <form [formGroup]="loginForm" (ngSubmit)="login()">
+        <form [formGroup]="formBuilder.form" (ngSubmit)="login()">
 
           <mat-form-field class="full-width">
             <mat-label>{{'login.email' | translate}}</mat-label>
             <input matInput placeholder="{{'login.email' | translate}}" name="email"
-                   formControlName="username" required [ngClass]="{ 'is-invalid': submitted && f['username'].errors }">
-            <!-- adding validation message based on error type -->
-            <div *ngIf="submitted && f['username'].errors" class="invalid-feedback">
-              <div *ngIf="f['username'].errors?.['required']">Username is required</div>
-            </div>
+                   formControlName="username" required>
           </mat-form-field>
 
           <mat-form-field class="full-width">
             <mat-label>{{'login.password' | translate}}</mat-label>
-            <input matInput placeholder="{{'login.password' | translate}}" name="password"
-                   formControlName="password" required [ngClass]="{ 'is-invalid': submitted && f['password'].errors }"
+            <input matInput placeholder="{{'login.password' | translate}}"
+                   name="password"
+                   formControlName="password" required
                    [type]="hide? 'password' : 'text'">
             <mat-icon color="primary" matSuffix
                       (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-            <!-- adding validation message based on error type -->
-            <div *ngIf="submitted && f['password'].errors" class="invalid-feedback">
-              <div *ngIf="f['password'].errors?.['required']">Password is required</div>
-            </div>
           </mat-form-field>
 
           <mat-card-actions>
-            <div align="end">
+            <div class="login-form-actions">
               <a routerLink="/register" class="btn btn-link">{{'login.register' | translate}}</a>
               <span class="spacer"></span>
-              <button [disabled]="loading || !loginForm.valid" mat-raised-button type="submit"
+              <button [disabled]="loading || !formBuilder.form.valid" mat-raised-button type="submit"
                       color="primary">{{'login.login' | translate}}
               </button>
               <span *ngIf="loading">Loading</span>
