--- a/MonolithFullStackTemplate/templateUI/src/app/users/user/user.component.scss
+++ b/MonolithFullStackTemplate/templateUI/src/app/users/user/user.component.scss
@@ -29,7 +29,9 @@ $tabletSize: 800px;
   }
 
   &-form-actions {
-    padding-right: 10%;
-    //padding-bottom: 10%;
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
   }
 }
