--- a/MonolithFullStackTemplate/templateUI/src/app/users/user-details/user-details.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/users/user-details/user-details.component.html
@@ -1,13 +1,13 @@
 <div class="container">
-  <nav mat-tab-nav-bar>
-    <a mat-tab-link
-       *ngFor="let routeLink  of routeLinks"
+  <nav mat-tab-nav-bar [tabPanel]="tabPanel">
+    <a mat-tab-link   *ngFor="let routeLink  of routeLinks"
        [routerLink]="routeLink.link"
        routerLinkActive #rla="routerLinkActive"
        [active]="rla.isActive">
       {{routeLink.label}}
     </a>
   </nav>
+  <mat-tab-nav-panel #tabPanel>
+    <router-outlet></router-outlet>
+  </mat-tab-nav-panel>
 </div>
-
-<router-outlet></router-outlet>
