--- a/MonolithFullStackTemplate/templateUI/src/app/shared/styles/mixins/_typography.scss
+++ b/MonolithFullStackTemplate/templateUI/src/app/shared/styles/mixins/_typography.scss
@@ -1,47 +1,108 @@
+@import './media-query';
 
 // Main heading style
 @mixin mainHeader-style($font-family: 'Montserrat, sans-serif') {
   font-family: $font-family, serif;
-  font-size: 36px;
+  font-size: 18px;
   font-weight: bold;
   line-height: 1.2;
   color: #333;
+
+  @include media-query-md {
+    font-size: 30px;
+  }
+
+  @include media-query-lg {
+    font-size: 36px;
+  }
+
+  @include media-query-xl {
+    font-size: 42px;
+  }
 }
 
 // Subheading style
 @mixin subHeader-style {
   font-family: 'Open Sans', sans-serif;
-  font-size: 24px;
+  font-size: 14px;
   font-weight: bold;
   line-height: 1.3;
   color: #666;
+
+  @include media-query-md {
+    font-size: 16px;
+  }
+
+  @include media-query-lg {
+    font-size: 20px;
+  }
+
+  @include media-query-xl {
+    font-size: 24px;
+  }
 }
 
 // Title style
 @mixin title-style {
   font-family: 'Raleway', sans-serif;
-  font-size: 20px;
+  font-size: 14px;
   font-weight: bold;
   line-height: 1.4;
   color: #444;
+
+  @include media-query-md {
+    font-size: 16px;
+  }
+
+  @include media-query-lg {
+    font-size: 20px;
+  }
+
+  @include media-query-xl {
+    font-size: 20px;
+  }
 }
 
 // Subtitle style
 @mixin subTitle-style {
   font-family: 'Lato', sans-serif;
-  font-size: 18px;
+  font-size: 12px;
   font-weight: normal;
   line-height: 1.4;
   color: #555;
+
+  @include media-query-md {
+    font-size: 14px;
+  }
+
+  @include media-query-lg {
+    font-size: 18px;
+  }
+
+  @include media-query-xl {
+    font-size: 18px;
+  }
 }
 
 // Paragraph style
 @mixin paragraph-style {
   font-family: 'Roboto', sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: normal;
   line-height: 1.5;
   color: #666;
+
+  @include media-query-md {
+    font-size: 16px;
+  }
+
+  @include media-query-lg {
+    font-size: 16px;
+  }
+
+  @include media-query-xl {
+    font-size: 16px;
+  }
 }
 
 // Link style
